--- a/Graph_for_group_0.html
+++ b/Graph_for_group_0.html
@@ -63,181 +63,262 @@ var nodes = new vis.DataSet([
 },{         id: 11, 
                                         label: "Britain"
 },{         id: 12, 
-                                        label: "right  "
+                                        label: "IMF"
 },{         id: 13, 
-                                        label: "negotiations  West"
+                                        label: "VEB"
 },{         id: 14, 
-                                        label: "effort  "
+                                        label: "right  "
 },{         id: 15, 
-                                        label: "system  "
+                                        label: "negotiations  West"
 },{         id: 16, 
-                                        label: "plans  kind"
+                                        label: "effort  "
 },{         id: 17, 
-                                        label: "power  "
+                                        label: "system  "
 },{         id: 18, 
-                                        label: "decades  "
+                                        label: "plans  kind"
 },{         id: 19, 
-                                        label: "way  "
+                                        label: "power  "
 },{         id: 20, 
-                                        label: "implementation  project"
+                                        label: "decades  "
 },{         id: 21, 
-                                        label: "foundation  "
+                                        label: "way  "
 },{         id: 22, 
-                                        label: "Ukraine  "
+                                        label: "implementation  project"
 },{         id: 23, 
-                                        label: "contribution  defence"
+                                        label: "foundation  "
 },{         id: 24, 
-                                        label: "issue  "
+                                        label: "Ukraine  "
 },{         id: 25, 
-                                        label: "warfare  "
+                                        label: "contribution  defence"
 },{         id: 26, 
-                                        label: "all  this"
+                                        label: "issue  "
 },{         id: 27, 
-                                        label: "work  "
+                                        label: "warfare  "
 },{         id: 28, 
-                                        label: "Americans  "
+                                        label: "all  this"
 },{         id: 29, 
-                                        label: "traits  "
+                                        label: "work  "
 },{         id: 30, 
-                                        label: "you  "
+                                        label: "Americans  "
 },{         id: 31, 
-                                        label: "goal  "
+                                        label: "traits  "
 },{         id: 32, 
-                                        label: "attempts  "
+                                        label: "you  "
 },{         id: 33, 
-                                        label: "arsenals  "
+                                        label: "goal  "
 },{         id: 34, 
-                                        label: "membership  "
+                                        label: "attempts  "
 },{         id: 35, 
-                                        label: "tests  "
+                                        label: "arsenals  "
 },{         id: 36, 
+                                        label: "membership  "
+},{         id: 37, 
+                                        label: "tests  "
+},{         id: 38, 
                                         label: "challenges  "
+},{         id: 39, 
+                                        label: "forecast  0"
+},{         id: 40, 
+                                        label: "years  "
+},{         id: 41, 
+                                        label: "economy  "
+},{         id: 42, 
+                                        label: "principles  development"
+},{         id: 43, 
+                                        label: "foothold  "
+},{         id: 44, 
+                                        label: "businesses  "
+},{         id: 45, 
+                                        label: "bulk  risks"
+},{         id: 46, 
+                                        label: "issue  breaks"
+},{         id: 47, 
+                                        label: "potential  "
+},{         id: 48, 
+                                        label: "principle  management"
+},{         id: 49, 
+                                        label: "agenda  "
 },   ]);
 var edges = new vis.DataSet([{       from: 1, 
-                            to: 12, 
+                            to: 14, 
                             arrows: "to",
                             label: "fighting",
                             info: {'sent_0': ' Since 2014  Donbass has been fighting for the right to live in their land and to speak their native tongue'}
 },{       from: 2, 
-                            to: 13, 
+                            to: 15, 
                             arrows: "to",
                             label: "held",
                             info: {'sent_1': ' I would like to emphasise that  prior to the special military operation  Kiev held negotiations with the West about the delivery of air defence systems  warplanes and other heavy equipment to Ukraine'}
 },{       from: 3, 
-                            to: 14, 
+                            to: 16, 
                             arrows: "to",
                             label: "made",
                             info: {'sent_2': ' It turns out that all this time  while Donbass was ablaze  while blood was being spilled  and while Russia sincerely made every effort to achieve a peaceful solution  I want to emphasise the word  sincerely    they gambled on people s lives  and in effect  were playing with marked cards  as they say in certain circles'}
 },{       from: 4, 
-                            to: 15, 
+                            to: 17, 
                             arrows: "to",
                             label: "needed",
                             info: {'sent_3': ' We were open and sincerely ready for a constructive dialogue with the West  we said and insisted that both Europe and the whole world needed an indivisible security system equal for all countries  and for many years we suggested that our partners discuss this idea together and work on its implementation'}
 },{       from: 2, 
-                            to: 16, 
+                            to: 18, 
                             arrows: "to",
                             label: "discussing",
                             info: {'sent_4': ' Even today  Kiev is openly discussing far reaching plans of this kind'}
 },{       from: 5, 
-                            to: 17, 
+                            to: 19, 
                             arrows: "to",
                             label: "seeks",
                             info: {'sent_5': ' We are defending human lives and our common home  while the West seeks unlimited power'}
 },{       from: 5, 
-                            to: 18, 
+                            to: 20, 
                             arrows: "to",
                             label: "doing",
                             info: {'sent_6': ' One gets the impression that this was done so that everyone would forget what the so called West has been doing over the past decades'}
 },{       from: 5, 
-                            to: 19, 
+                            to: 21, 
                             arrows: "to",
                             label: "paved",
                             info: {'sent_7': ' I would like to recall that  in the 1930s  the West had virtually paved the way to power for the Nazis in Germany'}
 },{       from: 5, 
-                            to: 20, 
+                            to: 22, 
                             arrows: "to",
                             label: "expedited",
                             info: {'sent_8': ' The West expedited the implementation of this project today by supporting the 2014 coup'}
 },{       from: 6, 
-                            to: 21, 
+                            to: 23, 
                             arrows: "to",
                             label: "formed",
                             info: {'sent_9': ' Russophobia and extremely aggressive nationalism formed its ideological foundation'}
 },{       from: 5, 
-                            to: 22, 
+                            to: 24, 
                             arrows: "to",
                             label: "using",
                             info: {'sent_10': ' The West is using Ukraine as a battering ram against Russia and as a testing range'}
 },{       from: 7, 
-                            to: 23, 
+                            to: 25, 
                             arrows: "to",
                             label: "appreciates",
                             info: {'sent_11': ' The people must know that the Motherland appreciates their contribution to the defence of the Fatherland'}
 },{       from: 8, 
-                            to: 24, 
+                            to: 26, 
                             arrows: "to",
                             label: "reviewed",
                             info: {'sent_12': ' The Government reviewed this issue'}
 },{       from: 5, 
-                            to: 25, 
+                            to: 27, 
                             arrows: "to",
                             label: "opened",
                             info: {'sent_13': ' Colleagues  As I have already said  the West has opened not only military and informational warfare against us  but is also seeking to fight us on the economic front'}
 },{       from: 9, 
-                            to: 26, 
+                            to: 28, 
                             arrows: "to",
                             label: "blame",
                             info: {'sent_14': ' Moreover  those who initiated the sanctions are punishing themselves  they sent prices soaring in their own countries  destroyed jobs  forced companies to close  and caused an energy crisis  while telling their people that the Russians were to blame for all of this'}
 },{       from: 8, 
-                            to: 27, 
+                            to: 29, 
                             arrows: "to",
                             label: "conduct",
                             info: {'sent_15': ' I hope the Government will consistently and seriously conduct this work together with Parliament  the law enforcement bodies and business associations'}
 },{       from: 10, 
-                            to: 28, 
+                            to: 30, 
                             arrows: "to",
                             label: "argued",
                             info: {'sent_16': ' True  I remember they still argued with each other   the Europeans argued with the Americans on how the Russian economy should develop'}
 },{       from: 3, 
-                            to: 29, 
+                            to: 31, 
                             arrows: "to",
                             label: "reflects",
                             info: {'sent_17': ' Here I would like to mention the character of our people who have always been distinguished by their generosity  magnanimity  mercy and compassion  and Russia  as a country  fully reflects these traits'}
 },{       from: 3, 
-                            to: 30, 
+                            to: 32, 
                             arrows: "to",
                             label: "counting",
                             info: {'sent_18': ' I want them to hear me  Russia is counting on you'}
 },{       from: 8, 
-                            to: 31, 
+                            to: 33, 
                             arrows: "to",
                             label: "given",
                             info: {'sent_19': ' I would like to emphasise that the Government and the regions of the Federation have been given a practical goal   to ensure noticeable  tangible growth in real wages in Russia'}
 },{       from: 5, 
-                            to: 32, 
+                            to: 34, 
                             arrows: "to",
                             label: "involved",
                             info: {'sent_20': ' We know that the West is directly involved in the Kiev regime s attempts to strike at our strategic aviation bases'}
 },{       from: 11, 
-                            to: 33, 
+                            to: 35, 
                             arrows: "to",
                             label: "have",
                             info: {'sent_21': ' Britain and France also have nuclear arsenals'}
 },{       from: 3, 
-                            to: 34, 
+                            to: 36, 
                             arrows: "to",
                             label: "suspending",
                             info: {'sent_22': ' In this regard  I am compelled to announce today that Russia is suspending its membership in the New START Treaty'}
 },{       from: 3, 
-                            to: 35, 
+                            to: 37, 
                             arrows: "to",
                             label: "conduct",
                             info: {'sent_23': ' Given these circumstances  the Defence Ministry and Rosatom must make everything ready for Russia to conduct nuclear tests'}
 },{       from: 3, 
-                            to: 36, 
+                            to: 38, 
                             arrows: "to",
                             label: "meet",
                             info: {'sent_24': ' Russia will meet any challenges because we are all one country  a big and united nation'}
+},{       from: 12, 
+                            to: 39, 
+                            arrows: "to",
+                            label: "believes",
+                            info: {'sent_25': ' This is at least what the IMF believes with its forecast of 0'}
+},{       from: 3, 
+                            to: 40, 
+                            arrows: "to",
+                            label: "exporter",
+                            info: {'sent_26': '  Russia has been a top five grain exporter for ten years now'}
+},{       from: 3, 
+                            to: 41, 
+                            arrows: "to",
+                            label: "involved",
+                            info: {'sent_27': '  Russia has been and will remain involved in the global economy'}
+},{       from: 3, 
+                            to: 42, 
+                            arrows: "to",
+                            label: "deviated",
+                            info: {'sent_28': '  Friends and colleagues   In the face of unprecedented challenges  Russia has not deviated from its principles of economic development   I said as much at the start'}
+},{       from: 3, 
+                            to: 43, 
+                            arrows: "to",
+                            label: "kept",
+                            info: {'sent_29': '  Russia has kept its foothold as the most important participant in the global market'}
+},{       from: 9, 
+                            to: 44, 
+                            arrows: "to",
+                            label: "employed",
+                            info: {'sent_30': ' More than 28 million Russians are employed in small and medium sized businesses'}
+},{       from: 13, 
+                            to: 45, 
+                            arrows: "to",
+                            label: "assume",
+                            info: {'sent_31': ' We will launch a special mechanism with VEB s participation which will allow banks to act as shareholders of investment projects whereby VEB will assume the bulk of the risks'}
+},{       from: 8, 
+                            to: 46, 
+                            arrows: "to",
+                            label: "considering",
+                            info: {'sent_32': ' The Government is now considering the issue of tax breaks both for issuers and buyers of such securities'}
+},{       from: 3, 
+                            to: 47, 
+                            arrows: "to",
+                            label: "has",
+                            info: {'sent_33': '  Russia has not only huge potential but also effective solutions'}
+},{       from: 8, 
+                            to: 48, 
+                            arrows: "to",
+                            label: "leveraging",
+                            info: {'sent_34': '  The Government and our colleagues in the regions are leveraging the platform based principle of data based management in their daily operations'}
+},{       from: 3, 
+                            to: 49, 
+                            arrows: "to",
+                            label: "has",
+                            info: {'sent_35': '  Today  Russia has a packed and very ambitious economic agenda'}
 },   ]);
 
       var container = document.getElementById('mynetwork');
